<resources>

    <string name="app_name">Bottom Navigation Android Example</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_queue">Queue</string>
    <string name="title_appointment">Appointment</string>
    <string name="title_prescription">Prescription</string>
    <string name="title_activity_queue">Queue</string>
    <string name="title_activity_appointment">Appointment</string>
    <string name="title_activity_appointment_info">AppointmentInfo</string>
    <string name="title_activity_appointment_modify">AppointmentModify</string>
    <string name="title_activity_prescription">Prescription</string>
    <string name="title_activity_prescription_modify">PrescriptionModify</string>
    <string name="title_activity_my_info">MyInfo</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="yourclinic">Your Clinic</string>
    <string name="currentnumber">Current Number</string>
    <string name="yournumber">Your Number</string>
    <string name="takeanumber">Take a number</string>
    <string name="leavequeue">Leave queue</string>
    <string name="none">--</string>
    <string name="selectyourclinic">Select Your Clinic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myappointmentinfo">My Appointments</string>
    <string name="appointmentno">Appointment #</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="doctor">Doctor</string>
    <string name="add">Add</string>
    <string name="nonelong">----NONE99999----</string>
    <string name="phone">Telephone Number</string>
    <string name="appointmentnumber">Appointment Number</string>
    <string name="back">Back</string>
    <string name="addrexp">Naneviet Hospital</string>
    <string name="edit">Edit</string>
    <string name="appointmentinfo">Appointment Information</string>
    <string name="inputhospital">Pleace input your hosptial</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="date">Date</string>
    <string name="sep">:</string>
    <string name="editappo">Edit Appointment</string>
    <string name="appochange">Appointment Change Request</string>
    <string name="cancelrequest">Cancel Appointment</string>
    <string name="submitrequest">Submit Request</string>
    <string name="address">Address</string>
    <string name="addressexp">2586 Essendene Avenue, Abbotsford, British Columbia</string>
    <string name="myprescription">My Prescription</string>
    <string name="prescriptionnum">Prescription#</string>
    <string name="medication">Medication</string>
    <string name="Note">Note</string>
    <string name="med1">Chew 2 tablets 3 times a day</string>

</resources>
