<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_queue"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_queue" />

    <item
        android:id="@+id/navigation_appointment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_appointment" />

    <item
        android:id="@+id/navigation_prescription"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_prescription" />
    <item
        android:id="@+id/navigation_myinfo"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_activity_my_info" />

</menu>
