<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView7"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="12dp"
        android:text="@string/yourclinic"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="142dp"
        android:text="@string/currentnumber"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/yournumber"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="334dp"
        android:layout_height="59dp"
        android:layout_below="@+id/textView9"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="47dp"
        android:background="#3F51B5"
        android:text="@string/takeanumber"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="195dp"
        android:layout_height="34dp"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="23dp"
        android:background="#FF5722"
        android:text="@string/leavequeue"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView"

        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/textView9"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView9"
        android:layout_toRightOf="@+id/textView9"
        android:text="@string/none"
        android:textColor="#3F51B5"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"

        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/textView8"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:text="26"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>