<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/time"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="#3F51B5"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="180dp"
                    android:text="@string/doctor"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="#3F51B5"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <EditText
                    android:id="@+id/text_info_doctor"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="right|end"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/nonelong"
                    android:textColor="#2196F3"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView12" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/phone"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="#3F51B5"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <EditText
                    android:id="@+id/text_info_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/nonelong"
                    android:textColor="#2196F3"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView15" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/location"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="#3F51B5"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" />

                <TextView
                    android:id="@+id/text_info_location"
                    android:layout_width="280dp"
                    android:layout_height="0dp"
                    android:layout_gravity="right|end"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/addrexp"
                    android:textColor="#2196F3"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView13" />

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="92dp"
                    android:text="@string/back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/editappo"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginLeft="48dp"
                    android:text="Button"
                    app:layout_constraintStart_toEndOf="@+id/button_back"
                    app:layout_constraintTop_toTopOf="@+id/button_back" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:layout_marginLeft="44dp"
                    android:text="Button"
                    app:layout_constraintStart_toEndOf="@+id/button2"
                    app:layout_constraintTop_toTopOf="@+id/button2" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/year"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <Spinner
                    android:spinnerMode="dialog"
                    android:id="@+id/spinner_year"
                    android:layout_width="153dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="192dp"
                    android:layout_marginLeft="192dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView17" />

                <Spinner
                    android:spinnerMode="dialog"
                    android:id="@+id/spinner_month"
                    android:layout_width="153dp"
                    android:layout_height="27dp"
                    app:layout_constraintStart_toStartOf="@+id/spinner_year"
                    app:layout_constraintTop_toTopOf="@+id/textView18" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/month"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView17"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/date"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView18" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/time"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />

                <Spinner
                    android:spinnerMode="dialog"
                    android:id="@+id/spinner_date"
                    android:layout_width="153dp"
                    android:layout_height="27dp"
                    app:layout_constraintStart_toStartOf="@+id/spinner_month"
                    app:layout_constraintTop_toTopOf="@+id/textView19" />

                <Spinner
                    android:spinnerMode="dialog"
                    android:id="@+id/spinner_min"
                    android:layout_width="90dp"
                    android:layout_height="27dp"
                    app:layout_constraintEnd_toEndOf="@+id/spinner_date"
                    app:layout_constraintTop_toTopOf="@+id/spinner_hrs" />

                <Spinner
                    android:spinnerMode="dialog"
                    android:id="@+id/spinner_hrs"
                    android:layout_width="90dp"
                    android:layout_height="27dp"
                    app:layout_constraintEnd_toStartOf="@+id/textView21"
                    app:layout_constraintTop_toTopOf="@+id/textView20" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="6dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sep"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/spinner_min"
                    app:layout_constraintTop_toTopOf="@+id/spinner_hrs" />


            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </android.support.v7.widget.CardView>

</RelativeLayout>